Issue #7281: set up jdk-13 build, drop jdk-12